[package]
name = "slog-stdlog"
version = "3.0.4-pre"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "`log` crate adapter for slog-rs"
keywords = ["slog", "logging", "json", "log"]
license = "MPL-2.0/MIT/Apache-2.0"
documentation = "https://docs.rs/slog-stdlog"
homepage = "https://github.com/slog-rs/stdlog"
repository = "https://github.com/slog-rs/stdlog"
readme = "README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = "2"
slog-scope = "4"
log = "0.3.6"
crossbeam = "0.2.9"

[dev-dependencies]
slog-term = "2"
slog-async = "2"
