[package]
name = "slog-stdlog"
version = "4.2.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "`log` crate adapter for slog-rs"
keywords = ["slog", "logging", "json", "log"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
documentation = "https://docs.rs/slog-stdlog"
homepage = "https://github.com/slog-rs/stdlog"
repository = "https://github.com/slog-rs/stdlog"
readme = "README.md"
edition = "2018"

[lib]
path = "lib.rs"

[features]
default = []
kv_unstable = ["log/kv_unstable_std", "slog/dynamic-keys"]
record_location_unstable = []

[dependencies]
slog = "2.4"
slog-scope = "4"
log = { version = "0.4.11", features = ["std"] }
cached = "0.23.0"

[dev-dependencies]
slog-term = "2"
slog-async = "2"
