[package]
name = "slog-stdlog"
version = "4.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "`log` crate adapter for slog-rs"
keywords = ["slog", "logging", "json", "log"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
documentation = "https://docs.rs/slog-stdlog"
homepage = "https://github.com/slog-rs/stdlog"
repository = "https://github.com/slog-rs/stdlog"
readme = "README.md"
edition = "2018"
# This is our Minimum Supported Rust Version (MSRV)
#
# To change this, you must also:
# 1. Update the README file
# 2. Update the github actions file
# 3. Have an appropriate change to the minor version
#
# See the Cargo.toml in the primary slog repo for more details
#
# The first version of Cargo that supports this field was in Rust 1.56.0.
# In older releases, the field will be ignored, and Cargo will display a warning.
rust-version = "1.39"

[lib]
path = "lib.rs"

[features]
default = []
kv_unstable = ["log/kv_unstable_std", "slog/dynamic-keys"]

[dependencies]
slog = "2.4"
slog-scope = "4"
log = { version = "0.4.11", features = ["std"] }

[dev-dependencies]
slog-term = "2"
slog-async = "2"
